outputs/tsp_constructive-constructive/2025-09-20_00-37-24/evaluations/problem_eval-8350260037651993192_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 4
    {This algorithm prioritizes the destination node if unvisited; otherwise, it uses a hybrid approach combining nearest neighbor selection with a weighted probability based on distance, favoring closer nodes more strongly while still allowing for occasional exploration.}
     ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 4
    {This algorithm prioritizes the destination node if unvisited; otherwise, it uses a hybrid approach combining nearest neighbor selection with a weighted probability based on distance, favoring closer nodes more strongly while still allowing for occasional exploration.}
     ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
